--- a/app/src/main/res/layout/item_chat_message.xml
+++ b/app/src/main/res/layout/item_chat_message.xml
@@ -21,6 +21,7 @@
             android:maxWidth="280dp"
             android:padding="10dp"
             android:text="User message"
+            android:textColor="#111111"
             android:textSize="14sp" />
 
     </LinearLayout>
@@ -41,6 +42,7 @@
             android:maxWidth="280dp"
             android:padding="10dp"
             android:text="Assistant message"
+            android:textColor="#111111"
             android:textSize="14sp" />
 
     </LinearLayout>
